--- a/nice_bot/requirements.txt
+++ b/nice_bot/requirements.txt
@@ -2,3 +2,7 @@ python-telegram-bot==20.5
 pymysql==1.1.0
 peewee==3.16.3
 cryptography==41.0.3
+PyMySQL==1.1.0
+pytest==8.2.0
+pytest-asyncio==0.23.6
+pytest-mock==3.14.0
