--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -40,6 +40,7 @@ jobs:
           pytest Test/tests.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
 
   build:
+    needs: pytest
     runs-on: ubuntu-latest
     permissions:
       contents: read
