--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -37,7 +37,13 @@ jobs:
       - name: Test with pytest
         run: |
           pip install pytest pytest-cov
-          pytest Test/test_case.py --cov=com
+          pytest Test/test_case.py --cov=com --junitxml=junit/test-results-${{ matrix.python-version }}.xml
+      - name: Upload pytest test results
+        uses: actions/upload-artifact@v4
+        with:
+          name: pytest-results-${{ matrix.python-version }}
+          path: junit/test-results-${{ matrix.python-version }}.xml
+        if: ${{ always() }}
 
   build:
     needs: pytest
