Fix size docker image

--- a/nice_bot/Dockerfile
+++ b/nice_bot/Dockerfile
@@ -8,5 +8,5 @@ FROM python:3.11.9-alpine3.19
 
 WORKDIR /nice_bot
 
-COPY --from=builder /wheels nice_bot
+COPY --from=builder /wheels /wheels
 CMD ["python", "run.py"]
