Revert "Fix size docker image"
This reverts commit 5853e8a29cced40790ee2c882b88c9aef967d6da.

--- a/nice_bot/Dockerfile
+++ b/nice_bot/Dockerfile
@@ -6,5 +6,7 @@ RUN pip wheel --no-cache-dir --no-deps --wheel /wheels install -r requirements.t
 
 FROM python:3.11.9-alpine3.19
 
-COPY --from=builder /wheels .
+WORKDIR /nice_bot
+
+COPY --from=builder /wheels /wheels
 CMD ["python", "run.py"]
