Fix size docker image

--- a/nice_bot/Dockerfile
+++ b/nice_bot/Dockerfile
@@ -1,8 +1,27 @@
-FROM python:3.11
+FROM python:3.11.9-alpine3.19 as builder
 
-COPY . .
+ENV PYTHONUNBUFFERED 1
 
-#WORKDIR /usr/src/app
-#COPY requirements.txt ./
-RUN pip install -r requirements.txt
+WORKDIR /app/
+
+RUN python -m venv /opt/venv
+
+ENV PATH="/opt/venv/bin:$PATH"
+
+COPY ./nice_bot/requirements.txt /app/requirements.txt
+
+RUN pip install --no-cache-dir -Ur requirements.txt
+
+
+
+FROM python:3.11.9-alpine3.19 as runner
+
+WORKDIR /app/
+
+COPY --from=builder /opt/venv /opt/venv
+
+ENV PATH="/opt/venv/bin:$PATH"
+
+COPY ./nice_bot /app/
+
 CMD ["python", "run.py"]
