--- a/nice_bot/Dockerfile
+++ b/nice_bot/Dockerfile
@@ -2,13 +2,13 @@ FROM python:3.11.9-alpine3.19 as builder
 
 ENV PYTHONUNBUFFERED 1
 
-WORKDIR /app/
+WORKDIR /app
 
 RUN python -m venv /opt/venv
 
 ENV PATH="/opt/venv/bin:$PATH"
 
-COPY ./nice_bot/requirements.txt /app/requirements.txt
+COPY ./requirements.txt /app/requirements.txt
 
 RUN pip install --no-cache-dir -Ur requirements.txt
 
@@ -16,12 +16,12 @@ RUN pip install --no-cache-dir -Ur requirements.txt
 
 FROM python:3.11.9-alpine3.19 as runner
 
-WORKDIR /app/
-
 COPY --from=builder /opt/venv /opt/venv
 
 ENV PATH="/opt/venv/bin:$PATH"
 
-COPY ./nice_bot /app/
+WORKDIR /app
+
+COPY . .
 
 CMD ["python", "run.py"]
