Fix size docker image

--- a/nice_bot/Dockerfile
+++ b/nice_bot/Dockerfile
@@ -20,7 +20,7 @@ COPY --from=builder /opt/venv /opt/venv
 
 ENV PATH="/opt/venv/bin:$PATH"
 
-WORKDIR /nice_bot
+WORKDIR /app/nice_bot
 
 COPY . .
 
